VPC/main.tf
# VPC
resource "aws_vpc" "main" {
cidr_block = var.vpc_cidr
enable_dns_support = true
enable_dns_hostnames = true


tags = {
Name = "terraform-vpc"
}
}


# Internet Gateway
resource "aws_internet_gateway" "igw" {
vpc_id = aws_vpc.main.id


tags = {
Name = "vpc-igw"
}
}


# Public Subnet
resource "aws_subnet" "public" {
vpc_id = aws_vpc.main.id
cidr_block = var.public_subnet_cidr
availability_zone = var.az
map_public_ip_on_launch = true


tags = {
Name = "public-subnet"
}
}

# Private Subnet
resource "aws_subnet" "private" {
vpc_id = aws_vpc.main.id
cidr_block = var.private_subnet_cidr
availability_zone = var.az


tags = {
Name = "private-subnet"
}
}


# Elastic IP for NAT
resource "aws_eip" "nat" {
domain = "vpc"
}


# NAT Gateway
resource "aws_nat_gateway" "nat" {
allocation_id = aws_eip.nat.id
subnet_id = aws_subnet.public.id


depends_on = [aws_internet_gateway.igw]


tags = {
Name = "nat-gateway"
}
}


# Public Route Table
resource "aws_route_table" "public" {
vpc_id = aws_vpc.main.id


route {
cidr_block = "0.0.0.0/0"
gateway_id = aws_internet_gateway.igw.id
}


tags = {
Name = "public-rt"
}
}


# Private Route Table
resource "aws_route_table" "private" {
vpc_id = aws_vpc.main.id


route {
cidr_block = "0.0.0.0/0"
nat_gateway_id = aws_nat_gateway.nat.id
}


tags = {
Name = "private-rt"
}
}


# Route Table Associations
resource "aws_route_table_association" "public_assoc" {
subnet_id = aws_subnet.public.id
route_table_id = aws_route_table.public.id
}


resource "aws_route_table_association" "private_assoc" {
subnet_id = aws_subnet.private.id
route_table_id = aws_route_table.private.id
}
